--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,12 +14,13 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #ffffff;
     --foreground: #ededed;
   }
 }
 
 body {
+  background-color: white;
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
